solc_mutator_ossfuzz_seed_corpus/test_solidity/test_f2adb51fdb21a53dc6acb8e98b1799396d12233d6f5e41570a76e3626782afb0_76d7f1ba8ca42ff7f28397af752122706675b9e9_sol.sol
==== Source:  ====

==== Source: su0.sol ====
enum EN0 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9, M10, M11, M12, M13, M14, M15,
  M16, M17, M18, M19, M20, M21, M22, M23,
  M24, M25, M26, M27, M28, M29, M30, M31,
  M32, M33, M34, M35, M36, M37, M38, M39,
  M40, M41, M42, M43, M44, M45, M46, M47,
  M48, M49, M50, M51, M52, M53, M54, M55,
  M56, M57, M58, M59, M60, M61, M62, M63,
  M64, M65, M66, M67, M68, M69, M70, M71,
  M72, M73, M74, M75, M76, M77, M78, M79,
  M80, M81, M82, M83, M84, M85, M86, M87,
  M88, M89, M90, M91, M92, M93, M94, M95,
  M96, M97, M98, M99, M100, M101, M102, M103,
  M104, M105, M106, M107
}
pragma solidity >= 0.0.0;
library L0 {
  event ev0(address[]  ep0, bool  ep1);
  modifier m0(bytes26 i0) 
  {
    _;
  }
  modifier m1() 
  {
    if (false)
    {
      _;
    }
    assert(true);
    _;
    emit ev0(new address[](2), (true && (true && (int32(2147483647) < int32(251983429)))));
    _;
  }
  EN0 public constant cons0 = EN0.M77;
  int96 public constant cons1 = int96(39614081257132168796771975167);
  modifier m2() 
  {
    _;
  }
}
contract C0 {
  struct St0 {
    bool el0;
    uint216 el1;
  }
  uint56 public constant cons2 = (~(((uint56((((uint56(0) - uint56(0)) | uint56(0)) / uint56(72057594037927935))) - uint56(72057594037927935)) ** uint160(uint160(897614332710073511969751148003706433347468340155)))));
  using L0 for *;
  error er0(address ep0);
  type T0 is bool;
  event ev1(string[1] indexed ep0, function (address payable) external   indexed ep1);
  enum EN1 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42, M43, M44, M45, M46, M47,
    M48, M49, M50, M51, M52, M53, M54, M55,
    M56, M57, M58, M59, M60, M61, M62, M63,
    M64, M65, M66, M67, M68, M69, M70, M71,
    M72, M73, M74, M75, M76, M77, M78, M79,
    M80, M81, M82, M83, M84, M85, M86, M87,
    M88, M89, M90, M91, M92, M93, M94, M95,
    M96, M97, M98, M99, M100, M101, M102, M103,
    M104, M105, M106, M107, M108, M109, M110, M111,
    M112, M113, M114, M115, M116, M117, M118, M119,
    M120, M121, M122, M123, M124, M125, M126, M127,
    M128, M129, M130, M131
  }
  modifier m3() 
  {
    uint248(148516937606496673150578607854767899038652262043424684433188664513181539791);
    if (true)
    {
      assembly
      {
        for 
        {
        }
        115792089237316195423570985008687907853269984665640564039457584007913129639935
        {
          for 
          {
          }
          115792089237316195423570985008687907853269984665640564039457584007913129639935
          {
          }
          {
            let al0 := cons2
            {
              al0 := 115792089237316195423570985008687907853269984665640564039457584007913129639935
            }
          }
        }
        {
        }
        return(0, 0)
      }
      _;
    }
    else if (true)
    {
      if (false)
      {
      }
      else if ((true || false))
      {
        if (false)
        {
        }
      }
      else
      {
        emit L0.ev0(new address[](1), false);
      }
    }
    else if (true)
    {
    }
  }
  fallback() external virtual m3() 
  {
  }
  event ev2();
  error er1(C0.EN1 ep0);
  C0.T0   s0;
  int48[]   s1 = [int48(140737488355327)];
  constructor(C0.T0 i0) payable  {
    s0 = C0.T0.wrap(false);
    unchecked {
      for(      (~(uint16(0)));
;
)
      {
        function (bool, uint240) internal   l0;
      }
    }
  }
  receive() external virtual  payable
  {
    s0 = C0.T0.wrap(false);
  }
}
function f2()     returns(address o0)
{
  emit L0.ev0(new address[](2), (bytes20(address(0x86a2532C8D14F2576Bdc71D34F7cDc02e3c63753)) <= ripemd160(bytes("00e55ca8980fc4a2db1f79b1b33b"))));
}
struct St1 {
  uint192 el0;
  bool[] el1;
}
// ----
// Warning 3149: (su0.sol:1128-1303): The result type of the exponentiation operation is equal to the type of the first operand (uint56) ignoring the (larger) type of the second operand (uint160) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// TypeError 7615: (su0.sol:2695-2700): Only direct number constants and references to such constants are supported by inline assembly.
